# entropic_gol

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: grid.h
src/: grid.cpp  main.cpp
